# toolkit

./: .gitignore  .gitmodules  CMakeList_template.txt  CMakeLists.txt  CMakeLists_template.txt  README.md  VERSION  version.h.in
builds/: build_template.sh
cmake/: common_base_setting.cmake  generate_version_file.cmake  get_git_info.cmake  get_git_managed_info.cmake  get_svn_info.cmake
include/cmdline/: cmdline.h
include/toolkit/: cmdline_parse.h  default.h  error.h  timer.h
include/toolkit/DesignPattern/: Singleton.h
include/toolkit/design_pattern/: factory.h  singleton.h
include/toolkit/system/: cpu.h  system_info.h
sample/: CMakeLists.txt
samples/: CMakeLists.txt
samples/design_pattern/: CMakeLists.txt  sample_design_pattern.cpp  sample_dp_facade.h  sample_dp_factory.h  sample_dp_sigleton.h
samples/generated_version_file/: CMakeLists.txt  sample_generated_version_file.cpp
samples/samples_cmdline/: CMakeLists.txt  samples_cmdline.cpp
samples/samples_libcurl/: CMakeLists.txt  sample_libcurl.cpp
samples/samples_libuv/: CMakeLists.txt  sample_libuv.cpp
scripts/: create_project.sh  deploy_develop_env.sh  deploy_ndk.sh  deploy_vsftpd.sh  generate_version_file.sh  gitea_deploy.sh  pack.sh  program_packing.sh
scripts/compile/: build_libevent_vs2019.sh  build_template.sh  check_yaml.sh  packing.sh  packing.yaml
scripts/deploy/: deploy_dokuwiki.sh  deploy_ndk.sh
scripts/develop/: create_project.sh  generate_version_file.sh  program_packing.sh  release.sh
scripts/general/: clog_print.sh
scripts/setenv/: add_ssh_port.sh
src/: CMakeLists.txt  library_main.cpp
test/: CMakeLists.txt  test_generated_version_file.cpp
test/generated_version_file/: CMakeLists.txt  test_generated_version_file.cpp
test/global_create_project/global_create_project/: global_create_project.sln
test/global_create_project/global_create_project/create_project/: create_project.vcxproj  create_project.vcxproj.filters
test/global_create_project/global_create_project/create_project1/: create_project1.vcxproj
toolkit/: CMakeLists.txt  library_main.cpp  library_show_version.h
toolkit/DesignPattern/: Factory.h
toolkit/cmdline/: cmdline.h
toolkit/memory/: SmartPtr.h
